--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,15 +1,15 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Cloud Timer",
+  "name": "Cloud Timer",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "homeicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#177E89",
+  "background_color": "#084C61"
 }
